# iglsynth

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
CMakeModules/: FindSpot.cmake
FMR_HW/: HW1.md  HW2.md  Instructions.md  buchi_attr.py  gridworld.py  gw_graph.py  gw_graph_solution.py  kripke.py  prod_ts_aut.py  tsys.py
cmake/modules/: FindLpSolve.cmake
docker/cpp-devel/: Dockerfile
docker/devel/: Dockerfile
docker/release/: Dockerfile
docs/source/: api.rst  conf.py  examples.rst  game.rst  index.rst  install.rst  logic.rst  util.rst
docs/source/examples/: construct_game_graph.rst  define_logic_formula.rst  ex_game_graph_construction.rst  gw_tsys_spec_zielonka.rst
docs/source/game/: core.rst  game.rst  index.rst  overview.rst
docs/source/logic/: core.rst  index.rst  ltl.rst  overview.rst
docs/source/solver/: core.rst  index.rst  zielonka.rst
docs/source/util/: graph.rst  index.rst  overview.rst  spot.rst
examples/: README-JUPYTER.md  entity_introduction.ipynb  epfl_reachability_example_v2.py  graph-intro.ipynb  graph_introduction.ipynb  graph_tutorial.py  hello.py  logic_formulas.py  tsys_spec_gridworld_example.py  tsys_tictactoe.ipynb
examples/benchmark_graph_ds/: benchmark.py  graph1.py  graph2.py  util.py
iglsynth/: version.py
iglsynth/game/: __init__.py  arena.py  core.py  game.py  gridworld.py  kripke.py  tsys.py
iglsynth/game/tests/: test_action.py  test_arena.py  test_game.py  test_game_imports.py  test_gridworld.py  test_tsys.py
iglsynth/logic/: core.py  ltl.py  pl.py
iglsynth/logic/tests/: test_alphabet.py  test_ap.py  test_ltl.py  test_pl.py  test_syntax_tree.py
iglsynth/model/: __init__.py  core.py  field.py  game.py  gridworld.py  tsys.py
iglsynth/model/tests/: test_action.py  test_arena.py  test_game.py  test_gridworld.py  test_model.py  test_tsys.py
iglsynth/readwrite/: __init__.py  iglpickle.py
iglsynth/solver/: core.py  solver.py  zielonka.py
iglsynth/util/: __init__.py  entity.py  graph.py  graphml.py  iglspot.py  meta.py  spot.py
iglsynth/util/tests/: test_entity.py  test_graph.py  test_graphml.py  test_spot.py
iglsynth_cpp/: boost_bind.cpp  boost_bind.h  entity.hpp  entity_wrap.cpp  game_wrap.cpp  graph.cpp  graph.hpp  main.cpp  util_wrap.cpp
iglsynth_cpp/game/: action.cpp  action.h
iglsynth_cpp/python_bind/: wrap_game.cpp  wrap_game.h  wrap_util.cpp  wrap_util.h
iglsynth_cpp/util/: entity.h  graph.cpp  graph.h  types.h
